fixed font for readability

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&display=swap');
 /* Base styles */
 body {
   /* font-family: "Roboto Mono", monospace; */
-  font-family: "MS PGothic", monospace;
+  /* font-family: "MS PGothic", monospace; */
+  font-family: 'IBM Plex Mono', monospace;
+
   font-optical-sizing: auto;
   /* font-weight: 600; */
   font-style: normal;
@@ -26,7 +29,6 @@ h1,
 h2,
 h3 {
   /* font-weight: 800; */
-  font-family: "Roboto Mono", monospace;
   font-weight: bold;
   margin: 0.5em 0;
   font-size: x-large;
